--- a/css/style.css
+++ b/css/style.css
@@ -1413,8 +1413,8 @@ pre {
   overflow-x: auto;
   -webkit-overflow-scrolling: touch;
   -ms-overflow-style: -ms-autohiding-scrollbar; }
-  .table-responsive > .table-bordered {
-    border: 0; }
+  /* .table-responsive > .table-bordered {
+    border: 0; } */
 
 .form-control {
   display: block;
